# be-bilibili-crawler

./: .dockerignore  .env.fastapi.prod  .gitignore  .sourcery.yaml  CONFIG.py  Dockerfile  README.md  alembic.ini  create_database.py  dev_env_main.py  ecosystem.config.js  faststream_app.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
ApiRoutes/: __init__.py
Models/: common.py  rpc_models.py  rpc_params.py
Models/BaseCrawler/: model.py
Models/MQ/: BaseMQModel.py  MQRouterModels.py  PrizeExtractMQModel.py  PrizeExtractResult.py  UpsertLotDataModel.py
Models/base/: custom_pydantic.py
Models/get_other_lot_dyn/: dyn_robot_model.py
Service/: llm_service.py
Service/BackgroundService/: CrawlerScheduler.py  DailyReportCrawler.py
Service/BackgroundServiceStatus/: GetScrapyStaus.py
Service/BaseCrawler/: CrawlerType.py  config.py
Service/CaptchaGen/: captcha_redis_store.py  captcha_service.py
Service/GetOthersLotDyn/: __init__.py
Service/LangChainCompo/: chains.py  text_embed.py
Service/PlayWright/: Operator.py
Service/ipinfo/: get_ipv6.py
Service/lottery_database/: bili_lotterty.py  lottery_statistic.py
Service/opus新版官方抽奖/: README.md
Service/samsclub/: main.py
Utils/FastAPI/: FastapiLifespan.py  alembic_manager.py
Utils/GrpcUtils/: CONST.py  GrpcDynamicRespUtils.py  GrpcMsgTools.py  UserAgentParser.py  user-agents_dalvik_application_2-1.json
Utils/designMode/: singleton.py
Utils/redisTool/: RedisManager.py
Utils/代理/: SealedRequests.py
Utils/加密/: utils.py  wbi加密.py
Utils/推送/: PushMe.py
Utils/数据库/: SqlalchemyTool.py
Utils/网关/: gateway_auth.py
Utils/通用/: CommMethods.py  Common.py  SleepTimeGen.py  Tool.py  dynamic_id_caculate.py
alembic/bili_reserve/: env.py
alembic/bilidb/: env.py
alembic/biliopusdb/: env.py
alembic/dyndetail/: env.py
alembic/proxy_db/: env.py
alembic/samsclub/: env.py
controller/common/: CommonRouter.py  base.py
dao/: IpInfoRedisObj.py  biliLotteryStatisticRedisObj.py  biliLotteryStatisticSqlHelper.py  commStorageRedisObj.py  lotDataRedisObj.py
dao/base/: sqlHelperBase.py
log/: base_log.py
scripts/: _cli_utils.py
scripts/judge_grand_prize/: __main__.py
scripts/代理/: add_proxy.py
scripts/光猫ip/: ifconfig.bat  ifconfig_add.example.bat  squid.example.conf
test/: _test_crawler.py  blackbox.py  blackboxprotobuf_test.py  conftest.py  grpc_msg_parse.py  grpc_test.py  ja3.py  test_background_service.py  test_captcha.py  test_chatgpt.py  test_common_router.py  test_get_other_lot_main.py  test_lottery_data.py  test_mq.py  test_other_routers.py
test/fixtures/: dynamic_412_resp.json  dynamic_detail_resp.json  dynamic_detail_resp_4101128.json  dynamic_detail_resp_article.json  dynamic_detail_resp_charge_lot.json  dynamic_detail_resp_official_lot.json  dynamic_detail_resp_pinned.json  (+9 more)
(+459 files in other folders)
