[project]
name = "fastapiapp"
version = "0.1.0"
license = { text = "BSD-3-Clause" }
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "aio-pika>=9.5.7",
    "aiodns>=3.5.0",
    "aiofiles>=25.1.0",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.0",
    "asyncer>=0.0.10",
    "beautifulsoup4>=4.14.2",
    "bili-ticket-gt-python>=0.3.2",
    "browserforge[all]>=1.2.4",
    "captcha>=0.7.1",
    "cloudscraper>=1.2.71",
    "cryptography>=46.0.3",
    "curl-cffi>=0.13.0",
    "datasets>=5.0.0",
    "exceptiongroup>=1.3.0",
    "fake-useragent>=2.2.0",
    "fastapi-cache2>=0.2.2",
    "fastapi-cdn-host>=0.9.2",
    "fastapi[all]>=0.119.1",
    "faststream[rabbit]>=0.6.2",
    "google>=3.0.0",
    "grpcio==1.82.0rc2",
    "grpcio-tools==1.82.0rc2",
    "httpx>=0.28.1",
    "jieba3>=1.0.2",
    "jsonlines>=4.0.0",
    "langchain>=1.3.11",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=1.3.3",
    "loguru>=0.7.3",
    "modelscope==1.37.1",
    "msgpack>=1.1.2",
    "opencc>=1.3.1",
    "pandas>=3.0.3",
    "patchright>=1.55.2",
    "pika>=1.3.2",
    "playwright>=1.55.0",
    "protobuf==7.35.1",
    "py-mini-racer>=0.6.0",
    "pydantic>=2.12.3",
    "pyexecjs2>=1.6.1",
    "pymilvus>=2.6.16",
    "python-dotenv>=1.1.1",
    "python-socks>=2.7.2",
    "redis>=8.0.0",
    "requests>=2.32.5",
    "scikit-learn==1.7.2",
    "socksio>=1.0.0",
    "sqlacodegen-v2>=0.1.4",
    "sqlmodel>=0.0.27",
    "strawberry-graphql[fastapi]>=0.284.1",
    "strawberry-sqlalchemy-mapper>=0.7.0",
    "tqdm>=4.68.3",
    "uvicorn[standard]>=0.38.0",
]
[tool.uv]
index-strategy = "unsafe-best-match"
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
trusted-host = "mirrors.aliyun.com"
default = true
[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
[[tool.uv.index]]
name = "volces"
url = "https://mirrors.volces.com/pypi/simple/"
[[tool.uv.index]]
name = "huaweicloud"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
pythonpath = ["."]
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
[[tool.uv.index]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
[[tool.uv.index]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"

